# stm32f103_rfid_ethernet_reader

firmware/: .clang-format  .gitignore  .mxproject  CMakeLists.txt  STM32F103C8Tx_FLASH.ld  f103c8tx_ether_rfid.ioc
firmware/App/: CMakeLists.txt
firmware/App/Inc/: app.h  enc28j60.h  lwipopts.h  mfrc522.h
firmware/App/Inc/arch/: cc.h
firmware/App/Src/: app.c  enc28j60.c  mfrc522.c
firmware/Core/Inc/: main.h
firmware/Core/Src/: main.c  stm32f1xx_it.c
firmware/Tools/: dhcp_server.sh  rfid_server.py
firmware/cmake/stm32cubemx/: CMakeLists.txt
hardware/: ethernet_rfid_reader.kicad_pcb  ethernet_rfid_reader.kicad_pro  ethernet_rfid_reader.kicad_sch
hardware/jlcpcb/: project.db
